complete nav design for desktop

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="src/assets/icons/application.png">
+    <meta name="description" content="Marketo e-commerce">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marketo.</title>
   </head>
